migrate Abstract*Task.Builder to *Task.Builder (interface sub), difficulty selector, assigment limit bug fix, cleanup server disable method, 'passiton', chesthead should clean up better. passitontask, task finished method check